01-Data Types,Variables and Constants/Blank_c_program.txt
rohit@rohit-XPS-15-9560:~/C .$ vim Blank_c_program.c 

rohit@rohit-XPS-15-9560:~/C .$ gcc Blank_c_program.c 

/usr/lib/gcc/x86_64-linux-gnu/5/../../../x86_64-linux-gnu/crt1.o: In function `_start':
(.text+0x20): undefined reference to `main'
collect2: error: ld returned 1 exit status

rohit@rohit-XPS-15-9560:~/C .$ ./a.out

rohit@rohit-XPS-15-9560:~/C .$ gcc -E Blank_c_program.c 
# 1 "Blank_c_program.c"
# 1 "<built-in>"
# 1 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 1 "<command-line>" 2
# 1 "Blank_c_program.c"

rohit@rohit-XPS-15-9560:~/C .$ hexdump Blank_c_program.o

0000000 457f 464c 0102 0001 0000 0000 0000 0000
0000010 0001 003e 0001 0000 0000 0000 0000 0000
0000020 0000 0000 0000 0000 0178 0000 0000 0000
0000030 0000 0000 0040 0000 0000 0040 0009 0006
0000040 4700 4343 203a 5528 7562 746e 2075 2e35
0000050 2e34 2d30 7536 7562 746e 3175 317e 2e36
0000060 3430 392e 2029 2e35 2e34 2030 3032 3631
0000070 3630 3930 0000 0000 0000 0000 0000 0000
0000080 0000 0000 0000 0000 0000 0000 0000 0000
0000090 0001 0000 0004 fff1 0000 0000 0000 0000
00000a0 0000 0000 0000 0000 0000 0000 0003 0001
00000b0 0000 0000 0000 0000 0000 0000 0000 0000
00000c0 0000 0000 0003 0002 0000 0000 0000 0000
00000d0 0000 0000 0000 0000 0000 0000 0003 0003
00000e0 0000 0000 0000 0000 0000 0000 0000 0000
00000f0 0000 0000 0003 0005 0000 0000 0000 0000
0000100 0000 0000 0000 0000 0000 0000 0003 0004
0000110 0000 0000 0000 0000 0000 0000 0000 0000
0000120 4200 616c 6b6e 635f 705f 6f72 7267 6d61
0000130 632e 0000 732e 6d79 6174 0062 732e 7274
0000140 6174 0062 732e 7368 7274 6174 0062 742e
0000150 7865 0074 642e 7461 0061 622e 7373 2e00
0000160 6f63 6d6d 6e65 0074 6e2e 746f 2e65 4e47
0000170 2d55 7473 6361 006b 0000 0000 0000 0000
0000180 0000 0000 0000 0000 0000 0000 0000 0000
*
00001b0 0000 0000 0000 0000 001b 0000 0001 0000
00001c0 0006 0000 0000 0000 0000 0000 0000 0000
00001d0 0040 0000 0000 0000 0000 0000 0000 0000
00001e0 0000 0000 0000 0000 0001 0000 0000 0000
00001f0 0000 0000 0000 0000 0021 0000 0001 0000
0000200 0003 0000 0000 0000 0000 0000 0000 0000
0000210 0040 0000 0000 0000 0000 0000 0000 0000
0000220 0000 0000 0000 0000 0001 0000 0000 0000
0000230 0000 0000 0000 0000 0027 0000 0008 0000
0000240 0003 0000 0000 0000 0000 0000 0000 0000
0000250 0040 0000 0000 0000 0000 0000 0000 0000
0000260 0000 0000 0000 0000 0001 0000 0000 0000
0000270 0000 0000 0000 0000 002c 0000 0001 0000
0000280 0030 0000 0000 0000 0000 0000 0000 0000
0000290 0040 0000 0000 0000 0035 0000 0000 0000
00002a0 0000 0000 0000 0000 0001 0000 0000 0000
00002b0 0001 0000 0000 0000 0035 0000 0001 0000
00002c0 0000 0000 0000 0000 0000 0000 0000 0000
00002d0 0075 0000 0000 0000 0000 0000 0000 0000
00002e0 0000 0000 0000 0000 0001 0000 0000 0000
00002f0 0000 0000 0000 0000 0011 0000 0003 0000
0000300 0000 0000 0000 0000 0000 0000 0000 0000
0000310 0133 0000 0000 0000 0045 0000 0000 0000
0000320 0000 0000 0000 0000 0001 0000 0000 0000
0000330 0000 0000 0000 0000 0001 0000 0002 0000
0000340 0000 0000 0000 0000 0000 0000 0000 0000
0000350 0078 0000 0000 0000 00a8 0000 0000 0000
0000360 0008 0000 0007 0000 0008 0000 0000 0000
0000370 0018 0000 0000 0000 0009 0000 0003 0000
0000380 0000 0000 0000 0000 0000 0000 0000 0000
0000390 0120 0000 0000 0000 0013 0000 0000 0000
00003a0 0000 0000 0000 0000 0001 0000 0000 0000
*
00003b8



/*******new prgogram*****************************/
#include

rohit@rohit-XPS-15-9560:~/C$ gcc  Blank_c_program.c

Blank_c_program.c:1:9: error: #include expects "FILENAME" or <FILENAME>

         ^

/*******new prgogram*****************************/
#include<>

rohit@rohit-XPS-15-9560:~/C$ gcc  Blank_c_program.c
Blank_c_program.c:1:9: error: empty filename in #include
 #include<>
         ^
rohit@rohit-XPS-15-9560:~/C$ gcc -E Blank_c_program.c
# 1 "Blank_c_program.c"
# 1 "<built-in>"
# 1 "<command-line>"
# 1 "/usr/include/stdc-predef.h" 1 3 4
# 1 "<command-line>" 2
# 1 "Blank_c_program.c"
Blank_c_program.c:1:9: error: empty filename in #include
 #include<>
/*******new prgogram*****************************/
